# RPi_Pico_WAV_Player

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  ImageFitter.cpp  ImageFitter.h  LcdCanvas.cpp  LcdCanvas.h  README.md  Readme.md  TagRead.cpp  TagRead.h  UIMode.cpp  UIMode.h  adc_util.c  adc_util.h  lcd_background.cpp  main.c  main.cpp  ui_control.cpp  ui_control.h
.github/: .gitignore
.github/actions/build-and-rename/: action.yml
.github/actions/set-version/: action.yml  index.js  package-lock.json
.github/workflows/: build-binaries.yml  upload-release-asset.yml
LcdElementBox/: CMakeLists.txt  LcdElementBox.cpp  LcdElementBox.h
PlayAudio/: CMakeLists.txt  PlayAudio.cpp  PlayAudio.h  PlayNone.cpp  PlayNone.h  PlayWav.cpp  PlayWav.h  ReadBuffer.cpp  ReadBuffer.h  audio_codec.cpp  audio_codec.h  audio_init.cpp  audio_init.h
doc/: ConfigMenu.md
fatfs/: CMakeLists.txt  ff.c  ffconf.h  tf_card.c
file_menu/: CMakeLists.txt  file_menu_FatFs.c  file_menu_FatFs.h
hardware_gpio_ex/: CMakeLists.txt  gpio_ex.c
lib/LcdElementBox/: CMakeLists.txt  LcdElementBox.cpp  LcdElementBox.h
lib/PlayAudio/: CMakeLists.txt  PlayAudio.cpp  PlayAudio.h  PlayNone.cpp  PlayNone.h  PlayWav.cpp  PlayWav.h  ReadBuffer.cpp  ReadBuffer.h  audio_codec.cpp  audio_codec.h  audio_init.cpp  audio_init.h  i2s_audio_init.cpp  i2s_audio_init.h
lib/fatfs/: CMakeLists.txt  ffconf.h  tf_card.c  tf_card.h
lib/file_menu/: CMakeLists.txt  file_menu_FatFs.c  file_menu_FatFs.h
lib/hardware_gpio_ex/include/hardware/: gpio_ex.h
lib/my_pico_audio/: CMakeLists.txt
lib/my_pico_audio_i2s/: CMakeLists.txt  audio_i2s.c  audio_i2s.pio
lib/my_pico_audio_i2s/include/pico/: audio_i2s.h
lib/my_pico_stdio_usb/: CMakeLists.txt  stdio_usb.c
lib/my_pico_stdio_usb/include/pico/: stdio_usb.h
lib/pico_audio_32b/: CMakeLists.txt
lib/pico_audio_i2s_32b/: CMakeLists.txt  audio_i2s.c  audio_i2s.pio
lib/pico_audio_i2s_32b/include/pico/: audio_i2s.h
lib/pico_flash_param/: CMakeLists.txt  FlashParam.cpp  FlashParam.h  UserFlash.cpp
lib/pico_stdio_usb_revised/: CMakeLists.txt  stdio_usb.c
lib/pico_stdio_usb_revised/include/pico/: stdio_usb.h
lib/picojpeg/: CMakeLists.txt  JPEGDecoder.cpp  JPEGDecoder.h  picojpeg.c
lib/st7735_80x160/: CMakeLists.txt  iconfont.h  lcd.c  lcd.h  my_lcd.c  my_lcd.h  oledfont.h
my_pico_audio/: CMakeLists.txt  audio.cpp
my_pico_audio/include/pico/: sample_conversion.h
my_pico_audio_i2s/: CMakeLists.txt  audio_i2s.c
my_pico_audio_i2s/include/pico/: audio_i2s.h
picojpeg/: CMakeLists.txt  JPEGDecoder.cpp  JPEGDecoder.h
resource/: ICON16x16.xlsx
src/: ConfigMenu.cpp  ConfigMenu.h  ConfigParam.cpp  ConfigParam.h  FlashParam.cpp  FlashParam.h  ImageFitter.cpp  ImageFitter.h  LcdCanvas.cpp  LcdCanvas.h  LcdCanvasIcon.h  LcdCanvasIconDef.h  TagRead.cpp  TagRead.h  UIMode.cpp  UIMode.h  UserFlash.cpp  UserFlash.h  common.h  lcd_background.cpp  lcd_background.h  main.cpp  power_manage.cpp  power_manage.h  stack.c  stack.h  ui_control.cpp  ui_control.h  utf_conv.cpp  utf_conv.h
st7735_80x160/: CMakeLists.txt  lcd.c  lcd.h  my_lcd.c  my_lcd.h  oledfont.h
tools/: ICON16x16.xlsx
